--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,10 +1,17 @@
 imports:
-     - php
- 
+  - php
+
+filter:
+  excluded_paths:
+    - "tests/"
+    - "messages/"
+  dependency_paths:
+    - "vendor/"
+
 tools:
-    external_code_coverage:
-        timeout: 1800 # Timeout in seconds.
-    # disable copy paste detector and similarity analyzer as they have no real value
-    # and a huge bunch of false-positives
-    php_sim: false
-    php_cpd: false
+  external_code_coverage:
+    timeout: 1800 # Timeout in seconds.
+  # disable copy paste detector and similarity analyzer as they have no real value
+  # and a huge bunch of false-positives
+  php_sim: false
+  php_cpd: false
