--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ matrix:
 
 php:
   - 5.6
-  #- 7.1
+  - 7.0
+  - 7.1
 
   # cache vendor dirs
 cache:
@@ -15,6 +16,20 @@ cache:
 
 services:
   - mysql
+
+matrix:
+  fast_finish: true
+  include:
+
+    - php: 7.2
+
+    # run tests coverage on PHP 7.1
+    - php: 7.1
+      env: TASK_TESTS_COVERAGE=1
+
+    - php: 7.0
+
+    - php: 5.6
 
 install:
   - travis_retry composer self-update
